# industrial_prog

./: .gitignore
task-cmake/: CMakeLists.txt  REPORT.md
task-cmake/A/: preparing.py
task-cmake/B/: CMakeLists.txt  lib.cpp  lib.h
task-cmake/C/: main.cpp  test_cases.cpp
task-curves/: CMakeLists.txt  REPORT.md  download_if_missing.cmake  generate_lut.py  main.cpp
